# EasyCall

./: .gitignore  API Integration Specification2.md  FastAPI React Project Structure.md  Provider_System.md  Provider_System_Implementation_Plan.md  README.md  debug_delete_test.py  extensions.json  launch.json  settings.json  setup-windows.bat  start-application.bat
backend/: .env.example  check_loaded_code.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test1.py  test_basic.py  test_integration.py  test_pdf.py  test_simple.py  test_workflow_execution.py  test_xhtml2pdf.py
backend/application/: api_server.py  config.py  database.py
backend/apps/: __init__.py
backend/apps/ai/: __init__.py  apps.py  urls.py  views.py
backend/apps/core/: __init__.py  admin.py  apps.py  exceptions.py  models.py  urls.py  views.py
backend/apps/dashboard/: __init__.py  apps.py  tests.py  urls.py  views.py
backend/apps/execution/: api_executor.py  apps.py  executor.py  models.py  report_generator.py  urls.py
backend/apps/execution/migrations/: 0001_initial.py  0002_alter_executionlog_result_data_and_more.py  0003_alter_executionlog_status.py
backend/apps/execution/templates/reports/: base_report.html  base_report_xhtml2pdf.html
backend/apps/execution/templates/reports/sections/: cluster_balance.html  cluster_balance_simple.html  cluster_info.html  cluster_info_simple.html  counterparties.html  counterparties_simple.html  exposure.html  exposure_simple.html  generic_data.html  generic_data_simple.html  generic_table.html  generic_table_simple.html  key_value.html  key_value_simple.html  transaction_details.html  transaction_details_simple.html  trm_attribution.html  trm_attribution_simple.html  trm_exposure.html  trm_exposure_simple.html
backend/apps/integrations/: admin.py  apps.py  chainalysis_client.py  models.py  node_generator.py  openapi_parser.py  serializers.py  tests.py  trm_client.py  urls.py  views.py
backend/apps/integrations/migrations/: 0001_initial.py  0002_alter_openapispec_provider.py  0003_alter_openapispec_name_alter_openapispec_version.py  0004_alter_openapispec_unique_together.py
backend/apps/nodes/: apps.py  node_result.py  urls.py
backend/apps/nodes/query_nodes_chainalysis/: cluster_info_node.py
backend/apps/providers/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/providers/migrations/: 0001_initial.py  __init__.py
backend/apps/settings_manager/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/settings_manager/migrations/: 0001_initial.py  0002_alter_apicredential_api_key_encrypted_and_more.py  0003_alter_apicredential_provider.py
backend/apps/workflows/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/workflows/migrations/: 0001_initial.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/fields/: __init__.py  choices.py  constants.py  names.py  validators.py
backend/media/api_specs/2025/12/19/: trm_labs_sample.yaml
backend/media/api_specs/2025/12/21/: coingecko_cPkYisS.yaml  dummy_provider.yaml  dummy_provider_dLEly6u.yaml  etherscan_232PPUu.yaml  etherscan_byl93Ez.yaml
backend/providers/: __init__.py  apps.py
backend/templates/: base.html
backend/templates/dashboard/: coming_soon.html  home.html  upload_provider.html
backend/templates/reports/: base_report.html  base_report_xhtml2pdf.html
backend/test_data/: chainalysis_sample.json
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py
backend/utils/: __init__.py  encryption.py  helpers.py
documentation/: API Integration Specification1.md  FastAPI React Project Structure.md  Provider-system-architecture.md  (+4 more)
(+38 files in other folders)
