# =============================================================================
# FILE: easycall/backend/pyproject.toml
# =============================================================================
# Modern Python project configuration
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------
[project]
name = "easycall-backend"
version = "0.1.0"
description = "Blockchain Intelligence Workflow Builder - Backend"
readme = "../README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "EasyCall Team"}
]
keywords = ["blockchain", "workflow", "django", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

# -----------------------------------------------------------------------------
# Black Configuration
# -----------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
)/
'''

# -----------------------------------------------------------------------------
# isort Configuration (Alternative to setup.cfg)
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "config", "fields", "utils"]
skip = ["venv", ".venv", "migrations", "node_modules"]
combine_as_imports = true
include_trailing_comma = true
use_parentheses = true

# -----------------------------------------------------------------------------
# pytest Configuration (Alternative to setup.cfg)
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
]
precision = 2
show_missing = true

# -----------------------------------------------------------------------------
# Mypy Configuration
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations", "venv", ".venv"]